@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: http_negotiate.c,v 1.28 2008-04-14 15:22:45 bagder Exp $
+ * $Id: http_negotiate.c,v 1.29 2008-05-26 03:10:34 yangtse Exp $
  ***************************************************************************/
 #include "setup.h"
 
@@ -41,6 +41,15 @@
 #include "base64.h"
 #include "http_negotiate.h"
 #include "memory.h"
+
+#ifdef HAVE_SPNEGO
+# include <spnegohelp.h>
+# if defined(USE_OPENSSL) && !defined(USE_YASSLEMUL)
+#  include <openssl/objects.h>
+# else
+#  error "Can't compile SPNEGO support without OpenSSL."
+# endif
+#endif
 
 #define _MPRINTF_REPLACE /* use our functions only */
 #include <curl/mprintf.h>
