@@ -57,6 +57,7 @@ advice from friends like these:
  Michal Marek, Daniel Fandrich, Scott Barrett, Alexey Simak, Daniel Black,
  Rafa Muyo, Andre Guibert de Bruet, Brock Noland, Sandor Feldi, Stefan Krause,
  David Shaw, Norbert Frese, Bart Whiteley, Jean-Francois Bertrand, Ben Van Hof,
- Yuriy Sosov, Christopher Palow, Yang Tse, Liam Healy, Nikolai Kondrashov
+ Yuriy Sosov, Christopher Palow, Yang Tse, Liam Healy, Nikolai Kondrashov,
+ David Rosenstrauch
 
         Thanks! (and sorry if I forgot to mention someone)
